--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -10419,7 +10419,7 @@ a.text-dark:focus {
   }
 }
 .page-section {
-  padding: 6rem 0;
+  padding: 4rem 0;
 }
 .page-section .page-section-heading {
   font-size: 2.25rem;
@@ -10429,6 +10429,9 @@ a.text-dark:focus {
   .page-section .page-section-heading {
     font-size: 3rem;
     line-height: 2.5rem;
+  }
+  .page-section {
+    padding: 6rem 0;
   }
 }
 
@@ -10758,10 +10761,10 @@ form .row:first-child .floating-label-form-group {
 
 .socialicons {
   color: white !important;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 4px;
+  padding-right: 4px;
   transition: all 1s;
-  margin: 4px;
+  margin: 3px;
 }
 
 .socialicons :hover {
