add contact form

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -2,11 +2,11 @@
   background: linear-gradient(
     136deg,
     #0a89a8,
-    #060a30,
+    #09104b,
     #402786,
     #132663,
     #050831,
-    #08031aef
+    #08214eef
   );
   /* background: linear-gradient(136deg, #02080f, #0d5cb6, #0acafa, #9b59b6); */
 
