--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -95,3 +95,265 @@
     transform: translateY(0px);
   }
 }
+
+.widget.has-pt {
+  padding-top: 55px;
+}
+
+.widget {
+  .social-nav {
+    margin: 20px auto 0;
+  }
+}
+
+.widget-meta {
+  color: #fff;
+  letter-spacing: 0.75px;
+  text-transform: uppercase;
+  //
+  font-size: 13px;
+  margin: 0;
+  i {
+    margin-right: 10px;
+  }
+  a {
+    color: #fff;
+    float: right;
+    text-transform: none;
+    font-style: italic;
+  }
+}
+
+.widget-author {
+  .widget-author-inner {
+    margin: 0;
+    background: #fafafa;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.05);
+    padding: 0 30px 30px;
+
+    &:hover,
+    &:focus {
+      box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.05);
+    }
+  }
+  .author-avatar {
+    margin: -40px auto;
+    width: 108px;
+    height: 108px;
+  }
+  .author-name {
+    text-align: center;
+    color: #333;
+    margin: 20px 0 5px;
+  }
+  .author-title {
+    text-transform: uppercase;
+    text-align: center;
+    color: #808080;
+    margin: 0 0 15px;
+    letter-spacing: 0.75px;
+  }
+  p {
+    color: #808080;
+    margin-bottom: 15px;
+  }
+  .know-more {
+    display: table;
+    margin: 0 auto;
+
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+}
+
+.widget-twitter-inner {
+  background: #1da1f2;
+  padding: 25px 30px;
+  .row {
+    margin: 0;
+  }
+  .tweet-texts {
+    color: #fff;
+    height: 210px;
+    text-align: center;
+    font-size: 24px;
+
+    font-weight: bold;
+    p {
+      margin: 0;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    a {
+      font-size: 24px;
+      color: #fff;
+    }
+  }
+  .timepast {
+    text-align: center;
+
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 0.75px;
+  }
+}
+
+.widget-twitter2 {
+  .widget-twitter-inner {
+    background: #f8f8f8;
+    .tweet-texts {
+      color: #333;
+      height: 269px;
+      font-size: 20px;
+
+      font-weight: normal;
+      a {
+        font-size: 20px;
+        color: #333;
+      }
+    }
+    .timepast {
+      color: #808080;
+    }
+  }
+}
+
+.pager {
+  border-top: 2px solid #f5f4f4;
+  border-bottom: 2px solid #f5f4f4;
+  margin: 0;
+  width: 100%;
+  display: flex;
+  li {
+    text-align: left;
+    width: 50%;
+    float: left;
+    border-right: 1px solid #f5f4f4;
+    border-left: 0;
+    list-style: none;
+
+    .post-title {
+      @media (max-width: 600px) {
+        font-size: 20px;
+        margin: 10px 0;
+      }
+      a {
+        @media (max-width: 600px) {
+          font-size: 20px;
+        }
+      }
+      @media (max-width: 450px) {
+        display: none;
+      }
+    }
+    .taxonomy {
+      @media (max-width: 450px) {
+        display: none;
+      }
+    }
+  }
+}
+.post {
+  padding: 15px;
+  .row {
+    margin: 0;
+  }
+  .post-excerpt {
+    background: #fafafa;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.05);
+    padding: 25px 30px;
+    // @include transition;
+  }
+  .post-wrapper {
+    overflow: visible;
+    &:hover,
+    &:focus {
+      .post-excerpt {
+        box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.05);
+        background: #fff;
+      }
+    }
+    .featured-content {
+      a {
+        display: block;
+        position: relative;
+        .video-mark {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translateX(-50%) translateY(-50%);
+          z-index: 3;
+        }
+      }
+    }
+  }
+}
+#post-masonry {
+  @media (max-width: 600px) {
+    max-width: 320px;
+    margin: 0 auto;
+  }
+}
+
+.post-masonry {
+  @media (max-width: 991px) {
+    width: 50%;
+  }
+  @media (max-width: 600px) {
+    width: 100%;
+    padding: 15px 0;
+  }
+  .post-title {
+    font-size: 23px;
+    a {
+      font-size: 23px;
+    }
+  }
+  p {
+  }
+
+  &.post-format-quote {
+    .post-title {
+    }
+  }
+}
+
+.widget-with-posts {
+  @media (max-width: 991px) {
+    width: 50%;
+    &.widget-author {
+      padding-top: 55px;
+    }
+  }
+  @media (max-width: 600px) {
+    width: 290px;
+    padding: 15px 0;
+  }
+}
+
+.post-type4 {
+  .post-title {
+    font-size: 23px;
+    a {
+      font-size: 23px;
+      font-weight: 700;
+      text-transform: uppercase;
+    }
+  }
+  p {
+  }
+  &.post-format-link {
+    .post-title {
+      a {
+        text-transform: lowercase;
+      }
+    }
+  }
+  &.post-format-quote {
+    .post-title {
+      text-transform: uppercase;
+      letter-spacing: 0;
+    }
+  }
+}
