--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -78,7 +78,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #3e4852;
   text-align: left;
   background-color: #fff;
 }
@@ -4679,7 +4679,7 @@ input[type="button"].btn-block {
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 0.125rem solid rgba(0, 0, 0, 0.125);
+  border: 0.125rem solid rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
 }
 .card > hr {
@@ -10473,9 +10473,9 @@ a.text-dark:focus {
 .btn-social {
   border-radius: 100%;
   display: inline-flex;
-  width: 3.25rem;
-  height: 3.25rem;
-  font-size: 1.25rem;
+  width: 3rem;
+  height: 3rem;
+  font-size: 1rem;
   justify-content: center;
   align-items: center;
 }
