--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -83,7 +83,7 @@
 
 @keyframes icon-wobble {
   25% {
-    transform: translateY(-8px);
+    transform: translateY(-4px);
   }
   50% {
     transform: translateY(0px);
@@ -210,4 +210,91 @@
       color: #808080;
     }
   }
+}
+
+.notfound-404 h1 {
+  color: #00b5c3;
+  font-size: 150px;
+  font-weight: 900;
+}
+
+.my-navbar {
+  background: transparent;
+  width: 100%;
+
+  .hamburger {
+    z-index: 5;
+    top: 1.6rem;
+    right: 1.8rem;
+    display: none;
+    cursor: pointer;
+    transition: left 500ms cubic-bezier(0.6, 0.05, 0.28, 0.91);
+    position: absolute;
+
+    @media (max-width: 960px) {
+      display: block;
+    }
+    .bar {
+      width: 1.6rem;
+      height: 0.15rem;
+      margin-bottom: 0.3rem;
+      background-color: #fff;
+      transition: transform 500ms cubic-bezier(0.6, 0.05, 0.28, 0.91),
+        opacity 500ms, box-shadow 250ms, background-color 500ms;
+
+      @media (max-width: 600px) {
+        width: 1.6rem;
+      }
+    }
+  }
+
+  .nav-links {
+    padding: 1rem;
+
+    a {
+      color: #fff;
+      text-decoration: none;
+      margin-bottom: 0.5rem;
+
+      @media (max-width: 960px) {
+        color: #000;
+      }
+    }
+  }
+}
+
+.my-navbar-overlay {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
+  display: none;
+  transition: 0.4s;
+}
+
+.sidebar {
+  position: fixed;
+  z-index: 4;
+  overflow: auto;
+  top: 0px;
+  right: -275px;
+  width: 0;
+  opacity: 0;
+  height: 100%;
+  background-color: #fff;
+  transition: all 350ms cubic-bezier(0.6, 0.05, 0.28, 0.91);
+}
+.svg-inline--fa {
+  max-width: 1em;
+  max-height: 1em;
+}
+
+.fa-2x {
+  max-width: 2em;
+  max-height: 2em;
+}
+
+.fa-3x {
+  max-width: 3em;
+  max-height: 3em;
 }
