--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -299,3 +299,18 @@
   max-width: 3em;
   max-height: 3em;
 }
+
+.card-columns {
+  column-count: 1;
+}
+@media (min-width: 576px) {
+  .card-columns {
+    column-count: 2 !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .card-columns {
+    column-count: 3 !important;
+  }
+}
