update cv and upgrade interface

--- a/src/assets/scss/orbit-1.scss
+++ b/src/assets/scss/orbit-1.scss
@@ -9,7 +9,7 @@
 
 //*************************** Theme Colours ****************************/
 // Define theme colour scheme
-$theme-color: #42a8c0;
+$theme-color: #10608a;
 $text-color: #3f4650;
 $text-color-secondary: #545e6c;
 $text-grey: #97aac3;
